@@ -197,6 +197,10 @@ if (isActionAccessible($guid, $connection2, '/modules/Activities/activities_mana
                     'Finalised' => __('Finalised'),
                     'Estimated' => __('Estimated'),
                 ]);
+
+        $row = $form->addRow();
+            $row->addLabel('paymentDescription', __('Payment Description'));
+            $row->addTextArea('paymentDescription')->setRows(2);
     }
 
     $form->addRow()->addHeading('Time Slots', __('Time Slots'));
